--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,44 @@
-Babel==2.2.0
-Jinja2==2.8
+Babel==1.3
+Flask==0.10.1
+Jinja2==2.7.3
+Markdown==2.6.2
 MarkupSafe==0.23
-Pygments==2.1.3
-Sphinx==1.4
-alabaster==0.7.7
-decorator==4.0.9
+PyMonad==1.3
+PyYAML==3.11
+Pygments==2.0.2
+Sphinx==1.3.1
+Werkzeug==0.10.4
+alabaster==0.7.3
+bokeh==0.8.2
+certifi==14.05.14
+colorama==0.3.3
 docutils==0.12
-imagesize==0.7.0
-ipykernel==4.3.1
-ipyparallel==5.0.1
-ipython==4.1.2
-ipython-genutils==0.1.0
-ipywidgets==4.1.1
-jsonschema==2.5.1
-jupyter-client==4.2.2
-jupyter-core==4.1.0
-mistune==0.7.2
-nbconvert==4.1.0
-nbformat==4.0.1
-nose==1.3.7
-notebook==4.1.0
-path.py==8.1.2
-pexpect==4.0.1
-pickleshare==0.6
-ptyprocess==0.5.1
-pytz==2016.3
-pyzmq==15.2.0
-qtconsole==4.2.1
-requests==2.9.1
-simplegeneric==0.8.1
-six==1.10.0
-snowballstemmer==1.2.1
-terminado==0.6
-testpath==0.3
-tornado==4.3
-traitlets==4.2.1
+fn==0.4.3
+gnureadline==6.3.3
+greenlet==0.4.5
+ipython==3.1.0
+itsdangerous==0.24
+jsonschema==2.4.0
+matplotlib==1.4.3
+mistune==0.5.1
+multimethods==1.0.0
+nose==1.3.6
+numpy==1.9.2
+numpydoc==0.5
+pandas==0.16.0
+ptyprocess==0.4
+pulsar==1.2.0
+pymongo==2.8
+pypandoc==1.0.4
+pyparsing==2.0.3
+pypatt==0.3.1
+pystache==0.5.4
+python-dateutil==2.4.2
+pytz==2013b
+pyzmq==14.5.0
+requests==2.6.0
+six==1.9.0
+snowballstemmer==1.2.0
+sphinx-rtd-theme==0.1.7
+terminado==0.5
+tornado==4.1
